...
                Spacer(Modifier.weight(1f))
                Button(
                    onClick = if (step == DialerGuidanceState.LAST_SETUP_STEP) onComplete else onNext,
                ) {
                    Text(
                        if (step == DialerGuidanceState.LAST_SETUP_STEP) {
                            "Finish setup"
                        } else {
                            "Continue"
                        },
                    )
                }
            }
        }
    }
...
